# datascience

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
EDA/: explore_5.ipynb
data/baseball_mlb_2024-05-16_2024-05-17/grades_baseball_mlb_2024-05-16_2024-05-17.parquet/: part.0.parquet
framework/: backtest.py  models.py  utils.py
notebooks/: example.ipynb  pos_ev_challenge.ipynb
